--- a/Zametek.PrismEx.AvalonDock.TestApp/packages.config
+++ b/Zametek.PrismEx.AvalonDock.TestApp/packages.config
@@ -5,7 +5,9 @@
   <package id="Prism" version="5.0.0" targetFramework="net45" />
   <package id="Prism.Composition" version="5.0.0" targetFramework="net45" />
   <package id="Prism.Interactivity" version="5.0.0" targetFramework="net45" />
+  <package id="Prism.MEFExtensions" version="5.0.0" targetFramework="net45" />
   <package id="Prism.Mvvm" version="1.0.0" targetFramework="net45" />
   <package id="Prism.PubSubEvents" version="1.0.0" targetFramework="net45" />
   <package id="Zametek.Utility" version="1.0.1" targetFramework="net45" />
+  <package id="Zametek.WindowsEx.AvalonDock" version="1.0.2" targetFramework="net45" />
 </packages>
