--- a/Zametek.PrismEx.AvalonDock/packages.config
+++ b/Zametek.PrismEx.AvalonDock/packages.config
@@ -1,12 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CommonServiceLocator" version="1.2" targetFramework="net45" />
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
   <package id="Extended.Wpf.Toolkit" version="2.5" targetFramework="net45" />
-  <package id="Prism" version="5.0.0" targetFramework="net45" />
-  <package id="Prism.Composition" version="5.0.0" targetFramework="net45" />
-  <package id="Prism.Interactivity" version="5.0.0" targetFramework="net45" />
-  <package id="Prism.Mvvm" version="1.0.0" targetFramework="net45" />
-  <package id="Prism.PubSubEvents" version="1.0.0" targetFramework="net45" />
-  <package id="Zametek.Utility" version="1.0.1" targetFramework="net45" />
-  <package id="Zametek.WindowsEx.AvalonDock" version="1.0.1" targetFramework="net45" />
+  <package id="GitVersionTask" version="3.3.0" targetFramework="net45" developmentDependency="true" />
+  <package id="Prism.Core" version="6.1.0" targetFramework="net45" />
+  <package id="Prism.Wpf" version="6.1.0" targetFramework="net45" />
+  <package id="Zametek.Utility" version="1.0.4.0" targetFramework="net45" />
+  <package id="Zametek.WindowsEx.AvalonDock" version="1.0.3.0" targetFramework="net45" />
 </packages>
