--- a/Zametek.PrismEx.AvalonDock/packages.config
+++ b/Zametek.PrismEx.AvalonDock/packages.config
@@ -1,10 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
-  <package id="Extended.Wpf.Toolkit" version="2.5" targetFramework="net45" />
-  <package id="GitVersionTask" version="3.3.0" targetFramework="net45" developmentDependency="true" />
-  <package id="Prism.Core" version="6.1.0" targetFramework="net45" />
-  <package id="Prism.Wpf" version="6.1.0" targetFramework="net45" />
-  <package id="Zametek.Utility" version="1.0.4.0" targetFramework="net45" />
-  <package id="Zametek.WindowsEx.AvalonDock" version="1.0.3.0" targetFramework="net45" />
+  <package id="CommonServiceLocator" version="2.0.5" targetFramework="net462" />
+  <package id="Extended.Wpf.Toolkit" version="3.6.0" targetFramework="net462" />
+  <package id="Prism.Core" version="7.2.0.1422" targetFramework="net462" />
+  <package id="Prism.Wpf" version="7.2.0.1422" targetFramework="net462" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net462" />
 </packages>
